# origami-fold

./: Cargo.toml  LICENSE.md  README.md
src/: file.rs  fold.rs  fold_frame.rs  frame.rs  graph.rs  lib.rs  validation.rs
src/fold/: edge.rs  fold.rs  frame.rs  graph.rs  mod.rs
src/fold/validation/: mod.rs
src/graph/: mod.rs
src/graph/make/: mod.rs  pairs.rs  vertices_edges.rs
src/graph/validation/: length.rs  mod.rs  references.rs  reflexive.rs  types.rs  winding.rs
src/make/: pairs.rs  vertices_edges.rs
src/real/: f32.rs  f64.rs  float.rs  mod.rs  real.rs  rug.rs
src/validation/: length.rs  mod.rs  parents.rs  references.rs  reflexive.rs  types.rs  winding.rs
tests/: all.rs  fan-folded-through-cp.fold  kissing-squares.fold
