[package]
name = "fold_specification"
version = "1.2.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"

rug = { version = "1.27.0", optional = true }

[features]
default = ["arbitrary_precision"]
arbitrary_precision = ["dep:rug"]